Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
   <header class="wrap">
-    <h1>ULTIMATE7（ロト6）</h1>
+    <h1>ULTIMATE7｜ゆうちゃん専用</h1>
     <div class="sub">入力最小 → 母集団7を自動選出 → 7通り（7C6）を即出力</div>
   </header>
 
